stage0/tests/compile_fail/moves/use_after_move.dg
type P { v: i32 }
func main() -> i32 {
    let p = P { v: 3 }
    let q = p
    p.v
}
